# midilib

src/: CMakeLists.txt  endian.h
